<package>
  <name>smach_executer</name>
  <version>0.1.1</version>
  <description>Allows executing state machines via actionlib calls.</description>
  <maintainer email="jbinney@willowgarage.com">Jon Binney</maintainer>
  <license>BSD</license>
  <url>http://ros.org/wiki/smach_executer</url>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>rospy</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>tf2_ros</run_depend>
  <run_depend>tf2</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>smach</run_depend>
  <run_depend>smach_ros</run_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>actionlib_msgs</run_depend>
  <run_depend>move_base_msgs</run_depend>
  <run_depend>executer_actions</run_depend>

</package>
